--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
 <link rel="stylesheet" href="public/css/global.css">
 <link rel="stylesheet" href="public/css/font-awesome.min.css">
 <link rel="stylesheet" href="public/css/jquery.bxslider.css">
- <link rel="stylesheet" href="public/css/lightbox.min.css">
- <!-- For Google Map -->
- 
-	
-	
- <!-- End Google Map -->
- 
+<link rel="stylesheet" href="public/css/lightbox.min.css">
 <link href="public/css/ipadad05.css?v=001" rel="stylesheet" type="text/css" media="screen and (max-width:1200px)" />
 <link href="public/css/mobilead05.css?v=001" rel="stylesheet" type="text/css" media="screen and (max-width: 700px)" />
  <!--<link rel="stylesheet" href="http://www.lookssalon.in/public/css/animations.css" type="text/css" media="screen and (min-width: 768px)">-->
  <link rel="stylesheet" href="../code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+ <!-- OG Tags -->
+    <meta name="title" property="og:title" content="Crois En Toi Unisex Salon | Top Salon in Vimanagar"/>
+    <meta name="content" property="og:content"/>
+    <meta property="og:description" content="Crois En Toi Unisex Salon serves as your best grooming destination in the heart of Pune city. Crois En Toi Unisex Salon helps you redefine yourself by discover beauty"/>
+    <meta property="og:type" content="page"/>
+    <meta property="og:url" content="https://rezmatic.github.io/Crois-En-Toi-Salon/index.html/"/>
+    <meta property="og:image" content="https://rezmatic.github.io/Crois-En-Toi-Salon/ogimg.png">
+    <!-- End OG Tags -->
 
 
 <script>
