--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
 <h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @YourName</h5>
 
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/872815" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px"></iframe>
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:480px; height:160px"></iframe>
 </section>
 
 
