--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 </section>
 
 <section class="container-fluid spacing">
-<h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @YourName</h5>
+<h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @croisentoi_unisex_salon</h5>
 
 <!-- SnapWidget -->
 <!-- SnapWidget -->
