--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
 
 <!-- SnapWidget -->
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:480px; height:160px"></iframe>
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px"></iframe>
 </section>
 
 
