--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 <section class="container-fluid spacing">
 <h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @croisentoi_unisex_salon</h5>
 
-<!-- SnapWidget -->
-<!-- SnapWidget -->
-<!-- SnapWidget -->
+
+<!-- SnapWidget Start-->
 <iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px"></iframe>
 </section>
+<!-- SnapWidget End-->
 
 
 
