--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,7 @@ Eden Park, Shop No. 10, Prasun Corner <br/>
 <div class="col-sm-12">
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d7564.212327897887!2d73.9162643420775!3d18.569251880134782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d18.5702931!2d73.92422479999999!4m5!1s0x3bc2c1008995c6bb%3A0x42e3242ee8af9f20!2scrois%20en%20toi%20salon!3m2!1d18.5672794!2d73.9188286!5e0!3m2!1sen!2sin!4v1705400013628!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.1499027466175!2d73.91625367496415!3d18.56727938253544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c1008995c6bb%3A0x42e3242ee8af9f20!2sCrois%20En%20Toi%20UniSex%20Salon!5e0!3m2!1sen!2sin!4v1705413428623!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <br/>
 <p class="yellowBtn text20  btmSpacing text-center"><a href="#">Book Appointment</a></p>
 </div>
