--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="headRight">
 
 <div class="share-link">
-<a href="#" target="_blank" class="topBtn">Book&nbsp;Appointment</a>
+<a href="https://dingg.app/booking/crois-en-toi-unisex-salon-hair-beauty-viman-nagar" target="_blank" class="topBtn">Book&nbsp;Appointment</a>
     <span class="mobileBlock">
     <a href="https://www.facebook.com/croisentoisalon" class="fb" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
     <a href="https://www.instagram.com/croisentoi_unisex_salon/" class="instagram" target="_blank"><i class="fa fa-instagram lg" aria-hidden="true"></i></a></span>
@@ -92,7 +92,7 @@
         </li>
         <li><a href="hair-styles-fashion-collection.html">Style Finder</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="#">Appointment</a></li>
+        <li><a href="https://dingg.app/booking/crois-en-toi-unisex-salon-hair-beauty-viman-nagar">Appointment</a></li>
        
     </ul>
      </div>
@@ -125,7 +125,7 @@
         </li>
         <li><a href="hair-styles-fashion-collection.html">Style Finder</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="#">Appointment</a></li>
+        <li><a href="https://dingg.app/booking/crois-en-toi-unisex-salon-hair-beauty-viman-nagar">Appointment</a></li>
        
     </ul>
      </div>
