--- a/offer-page.html
+++ b/offer-page.html
@@ -144,6 +144,16 @@
 
 </section>
 
+<section class="gMap container-fluid ">
+<div class="row">
+<div class="col-sm-12">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.1499027466175!2d73.91625367496415!3d18.56727938253544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c1008995c6bb%3A0x42e3242ee8af9f20!2sCrois%20En%20Toi%20UniSex%20Salon!5e0!3m2!1sen!2sin!4v1705413428623!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<br/>
+<p class="yellowBtn text20  btmSpacing text-center"><a href="https://dingg.app/booking/crois-en-toi-unisex-salon-hair-beauty-viman-nagar" target="_blank">Book Appointment</a></p>
+</div>
+</div>
+</section>
+
 <section class="container-fluid spacing">
 <h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @croisentoi_unisex_salon</h5>
 
