--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 
 
 <!-- SnapWidget Start-->
-<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px"></iframe>
-</section>
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px" title="Crois En Toi Instagram Widget"></iframe>
 <!-- SnapWidget End-->
 
 
