--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@
 <h5 class="heading5 text-center instagramIcon"><a href="https://www.instagram.com/instyleunisexpatna/" target="_blank"><img src="public/images/instagram.png" alt="Instagram Icon"></a><span class="text-uppercase">Follow us </span> @croisentoi_unisex_salon</h5>
 
 
-<!-- SnapWidget Start
-<iframe src="https://snapwidget.com/embed/1055430" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1280px; height:160px" title="Crois En Toi Instagram Widget"></iframe>
-SnapWidget End-->
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1070216" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:500px; height:500px" title="Posts from Instagram"></iframe>
 
 
 
