--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@ Eden Park, Shop No. 10, Prasun Corner <br/>
 <br/><br/>
 <i class="fa fa-clock-o" aria-hidden="true"></i>  Open until 10:00 PM<br/>
 
-<span class="atTheRate">@</span> <strong>Booking Enquiry:</strong> <a href="mailto:croisentoiunisexsalon@gmail.com" class="black">croisentoiunisexsalon@gmail.com</a><br/>
+<span class="atTheRate">@</span> <strong>Booking Enquiry:</strong> <a href="mailto:contact@croisentoisalon.com" class="black">contact@croisentoisalon.com</a><br/>
 
 <br/>
 </address>
