--- a/aboutus.html
+++ b/aboutus.html
@@ -189,7 +189,7 @@
 </div>
 </div>
 <div class="container-fluid blackBg"><div class="container  whtieColor text-center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Fj7HlShsHSM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://youtu.be/07HikfnqkQg?si=WRQNJk1qC3XCnRa7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div></div>
 
 <!--<div class="container-fluid awardBg animatedParent" id="awards">
